--- a/hybrid_cosy_spfs.tex
+++ b/hybrid_cosy_spfs.tex
@@ -231,7 +231,7 @@ and UNSAT problems respectively. The first column of each table lists the
 classes of problems on which we operated our experiments: we classify the
 problems according to the number of symmetries they admit. A line noted
 ``generators X-Y (Z)'' groups the Z problems having between X and Y generators
-(i.e., symmetries). Other columns show the number of solved problems for each
+(i.e. symmetries). Other columns show the number of solved problems for each
 approach.
 Globally, we observe that the combo approach can be effective in many classes
 of symmetrical problems. For SAT problems, the combo has better results than the
@@ -267,7 +267,7 @@ that could not be handled by ESBA nor SPA.
 Table~\ref{tab:global} compares the different techniques with respect to the
 PAR-2 and the CTI time measures. PAR-2 is the official ranking measure used in
 the yearly SAT contests~\cite{jarvisalo2012international}. CTI measures the
-Cumulative solving Time of the problem Intersection (i.e., 825 problems solved
+Cumulative solving Time of the problem Intersection (i.e. 825 problems solved
 by all solvers). While PAR-2 value gives a global indication on the
 effectiveness of an approach, CTI is a good measure to evaluate its speed compared
 to other approaches.
