--- a/introduction.tex
+++ b/introduction.tex
@@ -15,9 +15,9 @@ SAT is the first problem that has been proven to be NP-complete in 1971~\cite{co
 means that every NP problem can be solved by encoding it into a SAT one. Solving this problem in 
 polynomial time is equivalent to the P versus NP, one of the seven millennium prize problems.
 
-Despite this complexity, SAT solvers are becoming more and more powerful.
-Over the last decades, these can handle more and more complex problems in different domains:\hakan{refaire phrase}
-like \emph{formal methods} such that: bounded model checking (BMC)~\cite{bmc_99}; \emph{artificial intelligence}: planning decision~\cite{planning_92}; \emph{Bio informatics} : Haplotype inference~\cite{biology_06}.
+
+Despite this complexity, SAT solvers can model a wide variety of industrial and academic problems
+covering planning~\cite{planning_92}, bounded model checking (BMC)~\cite{bmc_99}, Haplotype inference~\cite{biology_06}, cryptography~\cite{crypto_00}\ldots
 In recent work, researchers have succeeded in proving, using a SAT solver, a maximum limit
 for the problem of coloring Pythagorean triples~\cite{heule2016solving}, with proof weighing 200 TB.
 The success of SAT comes from the introduction of sophisticated heuristics and optimization of the solving 
