--- a/symmetryinsat.tex
+++ b/symmetryinsat.tex
@@ -36,7 +36,8 @@ The last definition leads to important properties: i) uniqueness of the identity
 To prove this property, assume $\langle G, * \rangle$ a group with two identity elements $e$ and $f$ 
 then $ e = e * f = f$.
 ii) Uniqueness of the inverse element. To prove this property, suppose that an element $a$ has two inverses,
-denoted $b$ and $c$ in groups $\langle G, * \rangle$, then,\\
+denoted $b$ and $c$ in groups $\langle G, * \rangle$, then,
+
  $\begin{array}{lcll}     
 b & = & b * e & \\
 & = & b * (a * c) & c \text{ is an inverse of } a, \text{so } e = a * c\\
@@ -48,6 +49,7 @@ b & = & b * e & \\
 
 The structure $\langle G, * \rangle$ is denoted simply $G$ when clear from the context that G is a group
 with a binary operation. In this thesis, we only consider \emph{finite} groups, i.e. groups with a finite number of elements.
+\clearpage
 \begin{definition}[Subgroup]
 Given a group $G$, a \emph{subgroup} is a non-empty subset of $G$ which is also a group with 
 the same binary operation. We denote $H \leq G$, the subgroup $H$ of $G$.
@@ -85,7 +87,7 @@ So the permutation in cycle notation will be
  $g$ = ($x_1 \enskip x_2 \enskip x_3$) ($x_5 \enskip x_6$)
 \end{center}
 \begin{definition}[Support of a permutation]
- The \emph{support} of the permutation $g$, noted $\mathit{\support_{g}}$, is the set of elements that are not mapped to themselves:
+ The \emph{support} of the permutation $g$, noted $\mathit{supp_{g}}$, is the set of elements that are not mapped to themselves:
  \begin{center}
   $\support_{g} = \{ x \in X \mid g.x \neq x\}$
  \end{center}
@@ -115,7 +117,7 @@ as the \emph{orbits} of $X$ under $G$. The orbit of an element $x$ under group $
 from the context) is the set. $[x]_G = \{g.x \mid g \in G\}$
 \section{Symmetries in SAT}
 The previous mathematical definitions of group theory can be applied to a CNF formula.
-The symmetric group of permutations of $\Vars$ (i.e., bijections from $\Vars$ to $\Vars$) is noted
+The symmetric group of permutations of $\Vars$ (i.e. bijections from $\Vars$ to $\Vars$) is noted
 $\Group(\Vars)$. The group $\Group(\Vars)$ naturally acts on the set of literals: for $g
 \in \Group(\Vars)$ and a literal $\ell \in \Lits $, $g.\ell = g(\ell)$ if $\ell$ is a
 positive literal, and $g.\ell = \neg g(\neg \ell)$ if $\ell$ is a negative literal.
@@ -236,9 +238,9 @@ $m$ clauses and $n$ variables, the graph is constructed as follows~\cite{biere20
  \label{fig:graph_no_opt}
 \end{figure}
 \Cref{fig:graph_no_opt} shows the graph representation of a CNF. This problem has 6 variables and 11
-clauses. So, the graph will have  12  + 11 = 33 vertices, where 12 represent the number of literal vertices (circles in the figure ) 
+clauses. So, the graph will have  12  + 11 = 23 vertices, where 12 represent the number of literal vertices (circles in the figure ) 
 and 11 represents the number of clause vertices (squares in the figure). The graph will also have 6 + 24 = 30 edges, 6 
-edges for Boolean consistency (red edges in the figure) and 24 edges that rely clause vertices to the literals.
+edges for Boolean consistency (red edges in the figure) and 24 edges that link clause vertices to the literals.
 % and  24 + 36 = 60 
 %
 %\hakan{Explication du graph + informations num nodes num edges. Probleme reel battleship
@@ -252,17 +254,18 @@ edges for Boolean consistency (red edges in the figure) and 24 edges that rely c
 %one ship per row.\\
 %
 %Produced graph contains and = 60 edges 
-An optimization to reduce the number of graph vertices is possible. It is achieved by modeling binary clause
+An optimization to reduce the number of graph vertices is possible. It is achieved by modeling binary clauses
 using graph edges instead of graph vertices.  However, in some particular cases, it can produce
 spurious permutations (i.e. Boolean consistency is not respected~\cite{aloul2003solving}).
 To ensure that the permutation is valid, the following condition must be satisfied:
 $$\forall x \in \support_g, g.\neg x == \neg g.x$$
+\hakan{EXPLAIN}
 In other words, we check if the image of the negation of $x$ is equals to the negation of the image of $x$,
 or each element $x$ in the support of the permutation.
 This optimization reduces considerably the size of the 
 graph, and accelerates the symmetry detection.
-In the previous example, we can remove 12 nodes and 12 edges. More generally,
-we can remove from the graph as many nodes and edges as those are binary clauses on the formula.
+In the previous example, we can remove 9 nodes and 9 edges. More generally,
+we can remove from the graph as many nodes and edges as there are binary clauses on the formula.
 \Cref{fig:graph_opt} represents the optimized graph for the detection of automorphism.
 \begin{figure}[!htbp]
  \begin{minipage}[r]{.2\textwidth}
@@ -295,6 +298,8 @@ With the previous graph, the following generators are obtained using $\bliss$ as
  \end{minipage}
 \end{center}
  
+ \hakan{conclusion / hint }
+ 
 \section{Usage of symmetries}
 
 To illustrate the usage of symmetries, consider the \textit{pigeonhole problems} (see \Cref{fig:hole}), where $n$ pigeons are put into $n-1$ holes, with the constraint that each pigeon must be in a different hole. This is a
@@ -318,7 +323,7 @@ without changing the initial problem.
  \label{fig:hole}
 \end{figure}
 The search algorithm explores
-fruitlessly the symmetric search space, i.e, tries all possible combinations of couples (pigeon, hole).
+fruitlessly the symmetric search space, i.e. tries all possible combinations of couples (pigeon, hole).
 Solving this problem with a standard SAT solver, like MiniSAT~\cite{een2003extensible},
  turns out to be very time consuming (and even impossible, in a reasonable time, for high values of $n$). 
 To avoid this combinatorial explosion, a technique called \emph{symmetry breaking} allows a SAT solver to avoid the visit of symmetric search space. For this purpose, there are two principles , known as \emph{static symmetry breaking}
@@ -350,10 +355,10 @@ In this approach, only one assignment (branch) from each orbit is visited and al
 omitted.% to deduce the satisfiability of the formula by adding constraints.
 This leads us to the following questions:
 \begin{enumerate}
- \item How to generate constraints that forbid symmetrical assignments?
  \item How  to choose a branch that is equivalent to all symmetric ones?
+ \item How to generate constraints that forbid symmetrical assignments?
 \end{enumerate}
-To answer question 2, we need to introduce an ordering relation between assignments
+To answer question 1, we need to introduce an ordering relation between assignments
 
 \begin{definition}[Assignments ordering]\label{def:assignment_ordering}%
  We assume a total order, $\prec$, on $\Vars$.  Given two assignments $(\alpha,\beta) \in \Assignments(\Vars)^2 $,%
@@ -375,7 +380,7 @@ Furthermore, the $<$ relation is monotonic as expressed by the following proposi
  $$\text{If}~\alpha \subseteq \alpha'~\text{and}~\beta \subseteq \beta',~\text{then}~\alpha < \beta \implies \alpha' < \beta'$$
 \end{proposition}
 \begin{proof}
-The proposal is a direct result of the definition~\ref{def:assignment_ordering}.
+The proposition is a direct result of definition~\ref{def:assignment_ordering}.
 \end{proof}
 Given a formula $\varphi$ and its group of symmetries $G$,
 the \emph{orbit of $\alpha$ under $G$} (or
@@ -399,14 +404,18 @@ only one assignment per orbit (for instance each lex-leader).
 % \label{fig:lex-leader}  
 %\end{figure}
 
-To answer the first question, the set of lex-leader predicates for a permutation $g \in G_\varphi$ is defined as:
+To answer the second question, the set of lex-leader predicates for a permutation $g \in G_\varphi$ is defined as:
 $$LL_g = \forall i : (\forall j < i : x_j = g.x_j) \Rightarrow  x_i \preceq g.x_i$$
+
+
+\hakan{METTRE TOUT LES SBPS en sbps}
+\hakan{REVOIR}
 In other words, each assignment that has a variable such that its image under $g$ is smaller according to the ordering relation $\prec$, is pruned by $LL_g$.
-Conjunction of $LL_g$, for all permutations  $g \in G_{\varphi} $ produces a sound and complete set of symmetry breaking predicates also called \emph{full symmetry breaking}.
+The conjunction of $LL_g$, for all permutations  $g \in G_{\varphi} $ produces a sound and complete set of symmetry breaking predicates also called \emph{full symmetry breaking}.
 In this case, only the lex-leader assignment will be visited for each orbit.
 However, the size of the \textit{sbps} can be exponential in the number of variables of the problem and so, they cannot be totally computed.
-To overcome this problem, only a subgroup is considered, in this case 
-conjunction of $LL_g$ for $H \subset G_{\varphi}$ (such that $g$ is a permutation of the subgroup results a set of symmetry breaking predicates 
+To overcome this problem, only a subgroup is considered, in this case the
+conjunction of $LL_g$ for $H \subset G_{\varphi}$ (such that $g$ is a permutation of the subgroup) results a set of symmetry breaking predicates 
 that aims at visiting at least one assignment per orbit and is called \emph{partial symmetry breaking}.
 In this situation, several assignments per orbit can be visited but often bring a considerable reduction of the
 search space. Partial symmetry breaking gives a good trade-off between the number of generated constraints and the reduction of the search space.
@@ -474,7 +483,10 @@ $$ LL_g = \forall i : (\forall j < i : x_j = g.x_j) \Rightarrow  \neg x_i \lor g
 Here, the number of clauses generated per constraint increase exponentially by the 
 cardinality of the support  of the permutation. Hence, Aloul et al~\cite{aloul06} proposed a more compact representation of \textit{sbps} based on the creation of auxiliary variables.  
 These variables encode equality of literals and are disjoint from the support of the permutation.
-Following clauses encode a compact lex-leader for a permutation:
+The following clauses encode a compact lex-leader for a permutation:
+
+\hakan{REVOIR}
+
 %Let $g$ for a permutation, let $\support_g$ = $\{x_1, \cdots, x_n\}$ the support of $g$ be ordered 
 % such that $x_i \preceq x_j$ iff $i \leq j$  and let $\{y_0,\cdots, y_{n} \}$ be a set of auxiliary variables
 % disjoint from $\support_g$. These auxiliary variables encode equality of literals in such $y_0$ is set as an unit clause
@@ -556,7 +568,7 @@ In the example, the considered group has three permutations and its graphical re
 is shown. Given the lexicographic order, the smallest variable is $x_1$ and 
 all other variables are in its orbit. According to the ordering relation, five 
 \textit{sbps} are generated, one \textit{sbp} for each variable of the orbit except the smallest one.
-Then, the subgroup that stabilizes $x_1$ is computed. It contains only one permutation $(g_2)$.
+Then, the subgroup that stabilizes $x_1$ is computed. It contains only one permutation $(g_1)$.
 As $x_2$ is the smallest variable according to the lexicographic order, the constraint $\neg x_2 \lor x_3$ is generated. The stabilizer chain leads to a trivial group and no more binary clauses are generated.
 In total, six binary clauses are generated without adding any auxiliary variables.
 Moreover, a property can be observed, when the smallest variable has the greatest value 
@@ -586,7 +598,7 @@ generated.
 %\hakan{Conclu static}
 
 \subsubsection{Conclusion}
-Static symmetry breaking approach acts as a preprocessor that augment the initial formula with
+The static symmetry breaking approach acts as a preprocessor that augments the initial formula with
 \textit{sbps}. These constraints avoid the exploration of isomorphic search spaces.
 In the general case, the number of these clauses is often too large to be
  handled  effectively by a SAT solver~\cite{Luks2004}. 
@@ -644,26 +656,25 @@ One of the first tools for dynamic symmetry breaking is \emph{SymChaff} a struct
 and applies only on particular groups (\cref{sec:matrix-sbp}).
 To take part of this property, instead of using the classical decision heuristic that chooses exactly one
 variable, all symmetric variables are considered at the same time (k-branching). 
-Roughly speaking, all variable in the same orbit are assigned/unassigned at the same time. So, all possible valuation 
+Roughly speaking, all variables in the same orbit are assigned/unassigned at the same time. So, all possible valuations 
 of the orbit can be checked once. In this approach, only the number of true and false literal matters
 and computing the number of possible valuations is trivial in this particular 
-form of group. For example, consider the permutations: $g_1 = (1\, 2)$,
-only one of the valuations $F T$ (variable $1$ assigned to the false value and variable $2$ assigned to the true value) or the reverse assignment ($T F$).
+form of group. For example, consider the permutations: $g_1 = (x_1\, x_2)$,
+only one of the valuations $F T$ (variable $x_1$ assigned the false value and variable $x_2$ assigned the true value) or the reverse assignment ($T F$) is possible.
  So, one true value and one false value must be checked in addition to the 
 $F F$ and $T T$ assignments to determine the satisfiability of the formula.
  The order in which the valuations are checked has a tremendous impact on solver performance. 
 This approach has good results when the group of symmetries presents a particular form.
-In the general case, when we consider any group, computing the number of possible valuation will be very difficult and this approach is not applicable.
+In the general case, when we consider any group, computing the number of possible valuations will be very difficult and this approach is not applicable.
 
 \subsubsection{Symmetry Propagation}
 A different approach can be used to accelerate the tree traversal using symmetrical facts during the solving.
 One of them is \emph{symmetry propagation} (SP)~\cite{Devriendt12}.
 The general idea of this approach is to propagate symmetrical literals of those already propagated.
-In other words, it accelerates the tree traversal by ``transforming some guess (decisions) to deductions (propagations)''.
+In other words, it accelerates the tree traversal by ``transforming some guess (decisions) into deductions (propagations)''.
 %Indeed, the problem that presents symmetries makes possible to deduce some value 
 %for the variables that would be guessed if symmetry properties were ignored.
-These deductions will reduce the overall tree traversal depth and hence will eventually accelerate the solving process. To explain this approach, 
-let first give some definitions.
+These deductions will reduce the overall tree traversal depth and hence will eventually accelerate the solving process. To explain this approach, let us first give some definitions.
 \begin{definition}[Logical consequence]
  \label{def:logical_consequence}
  A formula $\phi$ is a logical consequence of a formula $\varphi$ denoted by $\varphi \models \phi$, if for any assignment
@@ -677,7 +688,7 @@ let first give some definitions.
  $\varphi \models \{l\}$, then $\varphi \cup \alpha \models g.\{l\}$.
 \end{proposition}
 In other words, if a literal $l$ is propagated by the solver and $g$ is a \emph{valid} symmetry for the
-sub problem $\varphi \cup \alpha$ (in which all satisfied clauses and false literals are removed) then, the solver can
+subproblem $\varphi \cup \alpha$ (in which all satisfied clauses and false literals are removed) then, the solver can
 also propagate the symmetric of $l$. The problem here is to determinate which symmetries are valid for the formula
 $\varphi \cup \alpha$.
 \begin{definition}[Active symmetry]
@@ -694,7 +705,7 @@ The previous proposition states that an active symmetry $g$ for a partial assign
 the formula $\varphi \cup \alpha$. So when a literal $l$ is propagated, and a symmetry $g$ is active for a
 partial assignment $\alpha$, the solver can also propagate $g.l$. 
 Moreover, the group theory allows to compose permutations, and the composition of two active symmetries is also an active symmetry,
-so the solver can also propagate. $g^2.l, g^3.l, ... $
+so the solver can also propagate $g^2.l, g^3.l, ... $
 
 Active symmetries need strong requirements and so their applications are limited.
 Devriendt et al~\cite{Devriendt12} improved the notion of active symmetries in the SAT context by
@@ -734,44 +745,64 @@ The overall performance of the symmetry propagation is intrinsically related to 
 %(even if the permutation is not weakly active). The added symmetrical clause will also participate to unit propagation and propagate the symmetrical literal.
 \subsubsection{Symmetry Explanation Learning}
 
+
 Another approach to exploit symmetry without removing any satisfiable assignment of the problem
 is \emph{Symmetry Explanation Learning}~\cite{devriendt2017symmetric} (SEL). 
-Symmetries of a formula leave this last invariant. Moreover, all learned clauses are logical consequences of the problem, symmetric of these clauses are also valid.
-Unlike Symmetry explanation scheme~\cite{benhamou2010enhancing} (SLS) where all symmetrical learned clauses
-are added to the clause database.
-The idea of this approach is to learn useful symmetrical variants of learnt clauses.
- A clause is said to be useful if it participates to the unit propagation or conflict analysis.
-Computing all symmetrical learnt clauses will create a huge overhead in terms of computation time and memory.
-Its usage will be limited on huge problems.
-% As symmetries leave the formula, the symmetrical clauses can be already
-%in managed clause by the solver and make unit propagation heavier.
-To avoid the previous drawback, SEL uses the following fact:
-i) All modern CDCL solvers need to maintain the implication graph and so store the reason of the propagated literals and
-obviously this reason is assertive.
-ii) Symmetries permute only few literals in a clause and so the probability that symmetrical clauses are also assertive is high.
-So, symmetrical clauses may also participate to the unit propagation.
-iii) These clauses are stored in different learning database and 
-treated separately. The solver promotes these clauses when they are effectively useful
-at the end of unit propagation. As unit propagation is done until fix point, it
-ensures no duplicate clause is added to the problem.
-iv) To limit memory impact, symmetrical clauses are removed when the propagated literal are unassigned.
-%Responsible of the computation is removed from the assignment.
+
+All learned clauses are logical consequences of the problem and the symmetric of these clauses are also valid and 
+can be added to the formula without restrictions. Symmetry learning scheme (SLS)~\cite{benhamou2010enhancing} 
+adds the symmetric clauses when they are learnt. This solution could add duplicate clause and create a memory overhead. Moreover, the deletion policy of learnt clause could remove clauses before they are effectively used.
+To alleviate these drawbacks, Symmetry Explanation Learning (SEL)~\cite{devriendt2017symmetric} adds symmetrical clauses
+when they are useful. A clause is said to be useful if it participates to the unit propagation or conflict analysis.
+Modern CDCl solvers maintain an implication graph and store the reason of a propagated literal (that is an assertive clauses) and computing the symmetrical of this clause may lead to useful clause. In general, symmetries permute few literal and so
+the probability that the symmetrical clause are also assertive is high.
+Symmetrical clauses are added in a different clause database and are promoted to the classical one when they are useful at the end of the unit propagation. As unit propagation is done until fix point, it ensures no duplicate clause is added to the problem.
+To limit the memory impact, symmetrical clauses are deleted when the variable responsible for the propagation is unassigned.
+
+
+
 Moreover, SEL provides some interesting properties:
 first, the authors prove that SEL propagations are a super-set of the one provided by SP. 
-It also does not need to track any status of symmetries (as opposite to SP).
+It also does not need to track any status of symmetries (as opposed to SP).
 Like SP no satisfying assignment is discarded.
 Nonetheless, the negative point is that SEL may flood the solver if the used set of symmetries is big. 
+
+%Symmetries of a formula leave this last invariant. Moreover, all learned clauses are logical consequences of the problem, symmetric of these clauses are also valid.
+%Unlike Symmetry explanation scheme~\cite{benhamou2010enhancing} (SLS) where all symmetrical learned clauses
+%are added to the clause database.
+%The idea of this approach is to learn useful symmetrical variants of learnt clauses.
+% A clause is said to be useful if it participates to the unit propagation or conflict analysis.
+%Computing all symmetrical learnt clauses will create a huge overhead in terms of computation time and memory.
+%Its usage will be limited on huge problems.
+%% As symmetries leave the formula, the symmetrical clauses can be already
+%%in managed clause by the solver and make unit propagation heavier.
+%To avoid the previous drawback, SEL uses the following fact:
+%i) All modern CDCL solvers need to maintain the implication graph and so store the reason of the propagated literals and
+%obviously this reason is assertive.
+%ii) Symmetries permute only few literals in a clause and so the probability that symmetrical clauses are also assertive is high.
+%So, symmetrical clauses may also participate to the unit propagation.
+%iii) These clauses are stored in different learning database and 
+%treated separately. The solver promotes these clauses when they are effectively useful
+%at the end of unit propagation. As unit propagation is done until fix point, it
+%ensures no duplicate clause is added to the problem.
+%iv) To limit memory impact, symmetrical clauses are removed when the propagated literal are unassigned.
+%%Responsible of the computation is removed from the assignment.
+%Moreover, SEL provides some interesting properties:
+%first, the authors prove that SEL propagations are a super-set of the one provided by SP. 
+%It also does not need to track any status of symmetries (as opposite to SP).
+%Like SP no satisfying assignment is discarded.
+%Nonetheless, the negative point is that SEL may flood the solver if the used set of symmetries is big. 
 
 \subsection{Conclusion} 
 Dynamic symmetry breaking approaches exploit the symmetry property of the formula during the solving.
 It prevents the creation, as in static symmetry breaking, of potentially useless clause that increases the size of the original formula.
-Different approaches exist, one use k-branching that allows to visit only lex-leader assignment but can be applied only in particular form group.
-Others, use the symmetry to propagate symmetrical facts.
-Mainly, they transform decisions (guesses) into propagations (deductions), that accelerate the tree traversal and may improve the overall
-performance of the solver.Moreover, as they are integrated directly to the search engine, solvers can adapt their heuristics dynamically, like for
+Different approaches exist, one uses k-branching that allows to visit only lex-leader assignment but can be applied only in particular form group.
+Others use the symmetry to propagate symmetrical facts.
+Mainly, they transform decisions (guesses) into propagations (deductions), that accelerate the tree traversal and may improve the overall performance of the solver. 
+Moreover, as they are integrated directly to the search engine, solvers can adapt their heuristics dynamically, like for
 example the restart.
 However, the integration of dynamic approach must be done carefully, CDCL algorithm is a highly optimized and 
-fine-tuned search engin. The integration of symmetry breaking can slow down its core engine.
+fine-tuned search engine. The integration of symmetry breaking can slow down its core engine.
 
 %Moreover, the computation of \textit{local symmetries} becomes possible. Effectively, some symmetry can 
 %appear during the solving algorithm, exploiting these symmetries is not possible on the static approach. 
