--- a/abbreviations.tex
+++ b/abbreviations.tex
@@ -157,7 +157,7 @@
 
 \newcommand{\Group}[0]{\ensuremath{\mathfrak{S}}}
 
-\newcommand{\support}{\ensuremath{supp}}
+\newcommand{\support}{\ensuremath{\mathit{supp}}}
 
 \newcommand{\track}{\ensuremath{pt}}
 
