--- a/fig/example-sbp.tex
+++ b/fig/example-sbp.tex
@@ -29,7 +29,7 @@
 	\vspace*{2\baselineskip}
 	
 	\begin{tabular}{ll}
-		Constraints & Generated SBP\\
+		Constraints & Generated sbps\\
 		\midrule
 		$x_1 \preceq x_4$ & $ \neg x_1 \lor x_4$ \\
 		&\\
