--- a/fig/implication_graph.tex
+++ b/fig/implication_graph.tex
@@ -30,8 +30,8 @@
 	\path[line width=0.5mm, draw=orange] ($(px4.east) + (0.5, -2)$) -- ($(px4.east) + (0.5, 4)$)  
 			   node [fill=white] {\textcolor{orange}{Cut 1}};
 	
-	\path[line width=0.5mm, draw=orange!60] ($(px4.east) + (-3.5, -2)$) -- ($(px4.east) + (-3.5, 4)$)
-			   node [fill=white] {\textcolor{orange!70}{Cut 2}};
+%	\path[line width=0.5mm, draw=orange!60] ($(px4.east) + (-3.5, -2)$) -- ($(px4.east) + (-3.5, 4)$)
+%			   node [fill=white] {\textcolor{orange!70}{Cut 2}};
 	
 	% Legend
 	
